--- a/Sign_Control/Permissions_Control/Web.config
+++ b/Sign_Control/Permissions_Control/Web.config
@@ -19,8 +19,9 @@
     </sectionGroup>
   </configSections>
   <appSettings>
-    <add key="PCBDB39" value="server=PCBDB39;uid=EDAAdmin;pwd=eda2695 ;database=EDA;Connect Timeout=300"/>
-    <!--<add key="PCBDB39" value="Data Source=localhost\SQLEXPRESS; Initial Catalog=EDA;Integrated Security=True"/>-->
+   <!-- <add key="PCBDB39" value="server=PCBDB39;uid=EDAAdmin;pwd=eda2695 ;database=EDA;Connect Timeout=300"/> -->
+    <add key="KSPCBDB10" value="server=KSPCBDB10;uid=EDAAdmin;pwd=EDA@2695 ;database=EDA;Connect Timeout=300"/>
+ 
   </appSettings>
   <connectionStrings/>
   <system.web>
