--- a/Sign_Control/Sign_Control/Permissions_Control/Sign_Control.csproj
+++ b/Sign_Control/Sign_Control/Permissions_Control/Sign_Control.csproj
@@ -10,8 +10,8 @@
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Permissions_Control</RootNamespace>
-    <AssemblyName>Permissions_Control</AssemblyName>
+    <RootNamespace>Sign_Control</RootNamespace>
+    <AssemblyName>Sign_Control</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <UseIISExpress>false</UseIISExpress>
   </PropertyGroup>
@@ -80,6 +80,8 @@
     <Content Include="js\jquery-ui.css" />
     <Content Include="js\jquery-ui.js" />
     <Content Include="js\me.js" />
+    <Content Include="MailSetting\Mail_S1.aspx" />
+    <Content Include="MailSetting\Mail_S1_Child1.aspx" />
     <Content Include="Main_R.aspx" />
     <Content Include="style\Sign_style.css" />
     <Content Include="Web.config">
@@ -97,11 +99,26 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Files\class\DBProcess_.cs" />
-    <Compile Include="Files\class\SQLCheck.cs" />
     <Compile Include="Files\class\Init.cs">
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
+    <Compile Include="Files\class\SQLCheck.cs" />
     <Compile Include="Files\class\Tools.cs" />
+    <Compile Include="Files\class\DBProcess_mail.cs" />
+    <Compile Include="MailSetting\Mail_S1.aspx.cs">
+      <DependentUpon>Mail_S1.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="MailSetting\Mail_S1.aspx.designer.cs">
+      <DependentUpon>Mail_S1.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="MailSetting\Mail_S1_Child1.aspx.cs">
+      <DependentUpon>Mail_S1_Child1.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="MailSetting\Mail_S1_Child1.aspx.designer.cs">
+      <DependentUpon>Mail_S1_Child1.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Main_R.aspx.cs">
       <DependentUpon>Main_R.aspx</DependentUpon>
