--- a/Sign_Control/Sign_Control/Permissions_Control/Web.config
+++ b/Sign_Control/Sign_Control/Permissions_Control/Web.config
@@ -15,8 +15,8 @@
     </sectionGroup>
   </configSections>
   <appSettings>
-    <add key="PCBDB39" value="server=PCBDB39;uid=EDAAdmin;pwd=eda2695 ;database=EDA;Connect Timeout=300"/> 
-    <!--<add key="KSPCBDB10" value="server=KSPCBDB10;uid=EDAAdmin;pwd=EDA@2695 ;database=EDA;Connect Timeout=300"/>-->
+    <!--<add key="PCBDB39" value="server=PCBDB39;uid=EDAAdmin;pwd=eda2695 ;database=EDA;Connect Timeout=300"/>--> 
+    <add key="KSPCBDB10" value="server=KSPCBDB10;uid=EDAAdmin;pwd=EDA@2695 ;database=EDA;Connect Timeout=300"/>
  
   </appSettings>
   <connectionStrings/>
