--- a/Sign_Control/Sign_Control/Permissions_Control/Sign_Control.csproj
+++ b/Sign_Control/Sign_Control/Permissions_Control/Sign_Control.csproj
@@ -42,6 +42,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\work_space\Ext.NET.WebForms.4.1.0\lib\net40\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
+      <HintPath>..\packages\NLog.4.4.1\lib\net40\NLog.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -65,6 +69,8 @@
   <ItemGroup>
     <Content Include="Files\backlogin.jpeg" />
     <Content Include="Files\Loading.gif" />
+    <Content Include="Files\Top_pic.png" />
+    <Content Include="Files\web1.png" />
     <Content Include="js\images\ui-bg_glass_55_fbf9ee_1x400.png" />
     <Content Include="js\images\ui-bg_glass_65_ffffff_1x400.png" />
     <Content Include="js\images\ui-bg_glass_75_dadada_1x400.png" />
@@ -82,6 +88,7 @@
     <Content Include="js\me.js" />
     <Content Include="MailSetting\Mail_S1.aspx" />
     <Content Include="MailSetting\Mail_S1_Child1.aspx" />
+    <Content Include="MailSetting\Mail_S1_Child2.aspx" />
     <Content Include="Main_R.aspx" />
     <Content Include="style\Sign_style.css" />
     <Content Include="Web.config">
@@ -102,6 +109,7 @@
     <Compile Include="Files\class\Init.cs">
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
+    <Compile Include="Files\class\Nlog.cs" />
     <Compile Include="Files\class\SQLCheck.cs" />
     <Compile Include="Files\class\Groceries.cs">
       <SubType>ASPXCodeBehind</SubType>
@@ -120,6 +128,13 @@
     </Compile>
     <Compile Include="MailSetting\Mail_S1_Child1.aspx.designer.cs">
       <DependentUpon>Mail_S1_Child1.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="MailSetting\Mail_S1_Child2.aspx.cs">
+      <DependentUpon>Mail_S1_Child2.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="MailSetting\Mail_S1_Child2.aspx.designer.cs">
+      <DependentUpon>Mail_S1_Child2.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Main_R.aspx.cs">
@@ -144,7 +159,14 @@
       <DependentUpon>Main_R_child2.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="NLog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <None Include="NLog.xsd">
+      <SubType>Designer</SubType>
+    </None>
+  </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
   </ItemGroup>
